--- a/GreenishWarblerGenomics2023.qmd
+++ b/GreenishWarblerGenomics2023.qmd
@@ -1013,7 +1013,7 @@ cd("/Users/darrenirwin/Dropbox/Darren's current work/")
 do_imputing = false
 if do_imputing
     @time imputed_genos = Impute.knn(genotypes_gwZ_SNPfiltered_with_missing; k=1, dims=:rows)
-    # took 102 sec
+    # took 46 sec
     jldsave(filename; imputed_genos, ind_with_metadata_indFiltered = ind_with_metadata_indFiltered_sex, pos_SNP_filtered_region = pos_SNP_filtered_gwZ_SNPfiltered)
     imputed_genos_chrZcleaned = imputed_genos
     ind_with_metadata_indFiltered_sex_chrZcleaned = ind_with_metadata_indFiltered_sex
@@ -1037,13 +1037,13 @@ Looks Great!! Now have a Z chromosome PCA with both males and females, based on 
 #### Genotype-by-individual plots for Z chromosome
 
 ```{julia}
-set = "54_inds_around_ring"  #"east_side_of_ring"    #"67_inds_around_ring"  # "west_side_of_ring"
+set = "55_inds_around_ring"  #"east_side_of_ring"    #"67_inds_around_ring"  # "west_side_of_ring"
 
-if set == "54_inds_around_ring"
+if set == "55_inds_around_ring"
     groups = ["vir","troch_LN","plumb"] # for purpose of calculating pairwise Fst and Fst_group (to determine SNPs)   
-    plotGroups = ["vir","vir_S","lud_PK","lud_KS","lud_central","troch_LN","troch_EM","obs", "plumb_BJ","plumb"]
-    plotGroupColors = ["blue","turquoise1","seagreen4","seagreen3","seagreen2","yellow","gold","orange", "pink","red"]
-    numIndsToPlot = [10, 5, 2, 1, 8, 10, 1, 4, 3, 10] # maximum number of individuals to plot from each group
+    plotGroups = ["vir","vir_S","lud_PK","lud_KS","lud_central","troch_LN","troch_EM","obs","plumb_BJ","plumb","plumb_vir"]
+    plotGroupColors = ["blue","turquoise1","seagreen4","seagreen3","seagreen2","yellow","gold","orange", "pink","red","purple"]
+    numIndsToPlot = [10, 5, 2, 1, 8, 10, 1, 4, 3, 10, 1] # maximum number of individuals to plot from each group
     group1 = "vir"   # these groups will determine the color used in the graph
     group2 = "plumb"
     groupsToCompare = "vir_plumb"   #"Fst_among"  #"vir_troch_LN"       #"vir_plumb"      #"troch_LN_plumb"      #"vir_troch_LN"
